...
                                .font(.headline)
                                .foregroundColor(.primary)) {
                                    Button(action: { showLogoutAlert.toggle() }) {
                                        HStack {
                                            Image(systemName: "arrow.right.square")
                                                .foregroundColor(.yellow)
                                            Text("Logout")
                                                .foregroundColor(.yellow)
                                        }
                                    }
                                    .alert(isPresented: $showLogoutAlert) {
                                        Alert(
                                            title: Text("Are you sure to logout?"),
                                            message: Text("You will be redirected to the login page"),
                                            primaryButton: .default(Text("Logout")) {
                                                provider.logout()
                                            },
                                            secondaryButton: .cancel()
                                        )
...
