...
//                    }
                }
                .sheet(isPresented: $showPinField) {
                    PinCodeView()
                }
            }
            .navigationTitle("Password restoring")
        }
    }
}


struct PinCodeView: View {
...
